<resources>
    <string name="app_name">Calculator</string>
    <string name="app_title">Aplikacja Kalkulator</string>
    <string name="author_name">Krzysztof Rojek</string>
    <string name="app_description">Prosta aplikacaja zawierająca kalkulator prosty oraz złożony.</string>
    <string name="back">Back</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="advanced_calculator">Advanced Calculator</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="paranteses_close">)</string>
    <string name="backspace">\u232B</string>
    <string name="clear">C</string>
    <string name="all_clear">AC</string>
    <string name="sqrt">\u221A</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="tan">tan</string>
    <string name="percent">%</string>
    <string name="pow_of_two">x^2</string>
    <string name="pow_of_y">x^y</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="dot">.</string>
    <string name="change_sign">+/-</string>
    <string name="equals">=</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>




</resources>