<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_formula"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:gravity="end"
        android:textColor="@color/white"
        android:backgroundTint="#00424200"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="formula"/>

    <!--  Result  -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_result"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="0.0"
        android:textColor="@color/white"
        android:backgroundTint="#00424200"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_formula"/>

    <!--ButtonLayout-->
    <GridLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="100dp"
        android:columnCount="5"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result">
        <!--  Buttons  -->
        <Button
            style="@style/PrimaryButtonStyle"
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:text="@string/backspace"/>
        <Button
            style="@style/PrimaryButtonStyle"
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/clear"/>

        <Button
            style="@style/PrimaryButtonStyle"
            android:id="@+id/btn_all_clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/all_clear"/>

        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_7"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn7"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_8"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn8"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_9"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn9"/>
        <Button
            style="@style/PrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_multiply"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:text="@string/multiply"/>
        <Button
            style="@style/PrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_divide"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:text="@string/divide"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_4"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn4"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_5"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn5"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_6"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn6"/>
        <Button
            style="@style/PrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_plus"
            android:layout_rowWeight="1"
            android:layout_rowSpan="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:text="@string/plus"/>

        <Button
            style="@style/PrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_minus"
            android:layout_rowWeight="1"
            android:layout_rowSpan="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:text="@string/minus"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn1"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_2"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn2"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_3"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn3"/>

        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_0"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/btn0"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_dot"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/dot"/>
        <Button
            style="@style/SecondaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_change_sign"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/change_sign"/>
        <Button
            style="@style/PrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_equals"
            android:layout_rowWeight="1"
            android:layout_rowSpan="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/equals"/>



    </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
