<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_simpleCalculator" />

    <Button
        style="@style/PrimaryButtonStyle"
        android:id="@+id/btn_simpleCalculator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60sp"
        android:text="@string/simple_calculator"
        app:layout_constraintBottom_toTopOf="@+id/btn_advancedCalculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintWidth_percent="0.6"
        android:textSize="20sp"/>

    <Button
        style="@style/PrimaryButtonStyle"
        android:id="@+id/btn_advancedCalculator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/advanced_calculator"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_simpleCalculator"
        app:layout_constraintBottom_toTopOf="@+id/btn_about"
        android:textSize="20sp"/>

    <Button
        style="@style/PrimaryButtonStyle"
        android:id="@+id/btn_about"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/about"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_advancedCalculator"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit" />

    <Button
        style="@style/PrimaryButtonStyle"
        android:id="@+id/btn_exit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="70sp"
        android:stateListAnimator="@android:anim/fade_in"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_about"
        app:layout_constraintWidth_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>